DOC_EXAMPLES = examples/example-client.c

noinst_PROGRAMS += example-gridfs
example_gridfs_SOURCES = examples/example-gridfs.c
example_gridfs_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += mongoc-dump
mongoc_dump_SOURCES = examples/mongoc-dump.c
mongoc_dump_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += filter-bsondump
filter_bsondump_SOURCES = examples/filter-bsondump.c
filter_bsondump_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += example-client
example_client_SOURCES = examples/example-client.c
example_client_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += mongoc-ping
mongoc_ping_SOURCES = examples/mongoc-ping.c
mongoc_ping_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += mongoc-rpc-validate
mongoc_rpc_validate_SOURCES = examples/mongoc-rpc-validate.c
mongoc_rpc_validate_LDADD = libmongoc-priv.la

noinst_PROGRAMS += mongoc-tail
mongoc_tail_SOURCES = examples/mongoc-tail.c
mongoc_tail_LDADD = libmongoc-1.0.la

noinst_PROGRAMS += find-and-modify
find_and_modify_SOURCES = examples/find-and-modify.c
find_and_modify_LDADD = libmongoc-1.0.la
