EXTRA_DIST += $(wildcard doc/*.rst)

EXTRA_DIST += \
  doc/CMakeLists.txt \
  doc/conf.py \
  doc/mongoc/__init__.py \
  doc/mongoc/CMakeLists.txt \
  doc/mongoc-theme/CMakeLists.txt \
  doc/mongoc-theme/globaltoc.html \
  doc/mongoc-theme/layout.html \
  doc/mongoc-theme/static/mongoc.css_t \
  doc/mongoc-theme/static/pygments.css \
  doc/mongoc-theme/theme.conf \
  doc/taglist.py
